cmake_minimum_required(VERSION 3.27)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 main.cpp
        dp/NumTrees.cpp
        dp/GenerateTrees.cpp
        dp/Rob.cpp
        dp/MaxPathSum.cpp
        dp/NumSquares.cpp
        dp/Change.cpp
        dp/CombinationSum4.cpp
        dp/FindMaxForm.cpp
        dp/MostPoints.cpp
        dp/CoinChange.cpp
        dp/CountGoodStrings.cpp
        dp/NumDecodings.cpp
        dp/MincostTickets.cpp
        dp/MinInsertions.cpp
        dp/MinInsertions.cpp
        BS/Search.cpp
        BS/SearchInsert.cpp
        BS/NextGreatestLetter.cpp
        BS/CountNegatives.cpp
        BS/FindRightInterval.cpp
        dp/SecretDead.cpp
        BS/SearchTwo.cpp
        BS/FindMin.cpp
        BS/FindMinTwo.cpp
        BS/SearchMatrix.cpp
        BS/IsPerfectSquare.cpp
        BS/MySqrt.cpp
        BS/Gap.cpp
        BS/ArrangeCoins.cpp
        BS/FindKthPositive.cpp
        BS/HIndex.cpp
        BS/SingleNonDuplicate.cpp
        BS/PeakIndexInMountainArray.cpp
        BS/FindClosestElements.cpp
        BS/FindMedianSortedArrays.cpp
        BS/TriangleNumber.cpp
        BS/SuccessfulPairs.cpp
        BS/NumSubseq.cpp
        MinPathProblem/CountPaths.cpp
        MinPathProblem/DijkstraByQueue.cpp
        BS/BorrowClassRoom.cpp
        EveryDayOneProblem/FindKOr.cpp
        EveryDayOneProblem/ShortestDistance.cpp
        EveryDayOneProblem/Shortest.cpp
        EveryDayOneProblem/DivisibilityArray.cpp
        EveryDayOneProblem/MinimumPossibleSum.cpp
        BS/TwoSumLessThanK.cpp
        "BS/PickIndex .cpp"
        LeetCodeCompare/MinimumBoxes.cpp
        LeetCodeCompare/MaximumHappinessSum.cpp
        LeetCodeCompare/ShortestSubstrings.cpp
        LeetCodeCompare/MaximumStrength.cpp
        EveryDayOneProblem/GetHint.cpp
        EveryDayOneProblem/KSum.cpp
        EveryDayOneProblem/CapitalizeTitle.cpp
        EveryDayOneProblem/temp.cpp
        LeetCodeCompare/MinimumSubarrayLength.cpp
        EveryDayOneProblem/TreeAncestor.cpp
        EveryDayOneProblem/MinMeetingRooms.cpp
        LeetCodeCompare/LongestMonotonicSubarray.cpp
        LeetCodeCompare/GetSmallestString.cpp
        LeetCodeCompare/MinOperationsToMakeMedianK.cpp
        LeetCodeCompare/MinimumCost.cpp
        EveryDayOneProblem/ThroneInheritance.cpp
        EveryDayOneProblem/MinOperations.cpp
        EveryDayOneProblem/MaximumCount.cpp
        alogorimPro/SpiralOrder.cpp
        alogorimPro/GameOfLife.cpp
        alogorimPro/Rotate.cpp
        EveryDayOneProblem/MaximumBinaryString.cpp
        alogorimPro/IsValid.cpp
        alogorimPro/InorderTraversal.cpp
        alogorimPro/RemoveKdigits.cpp
        alogorimPro/RemoveDuplicateLetters.cpp
        LeetCodeCompare/ScoreOfString.cpp
        LeetCodeCompare/MinRectanglesToCoverPoints.cpp
        LeetCodeCompare/MinimumTime.cpp
        LeetCodeCompare/NumberOfSubarrays.cpp
        LeetCodeCompare/FindLatestTime.cpp
        LeetCodeCompare/MaximumPrimeDifference.cpp
        LeetCodeCompare/FindKthSmallest.cpp
        Graph/FindCircleNum.cpp
        Graph/EventualSafeNodes.cpp
        Graph/CanVisitAllRooms.cpp
        EveryDayOneProblem/MinMalwareSpread.cpp
        Graph/ShortestAlternatingPaths.cpp
        Graph/NumOfMinutes.cpp
        Graph/MinReorder.cpp
        EveryDayOneProblem/MinMalwareSpread2.cpp
        Graph/AllPathsSourceTarget.cpp
        Graph/CriticalConnections.cpp
        EveryDayOneProblem/FindOriginalArray.cpp
        Graph/NearestExit.cpp
        Graph/ShortestBridge.cpp
        EveryDayOneProblem/MinSkips.cpp
        Graph/CanFinish.cpp
        Graph/FindSmallestSetOfVertices.cpp
        EveryDayOneProblem/CombinationSum.cpp
        BlueBridgeCompare/GoodNumber.cpp
        BlueBridgeCompare/Buitiful.cpp
        BlueBridgeCompare/StepNumber.cpp
        BlueBridgeCompare/Climing.cpp
        EveryDayOneProblem/CombinationSum4.cpp
        EveryDayOneProblem/CombinationSum3.cpp
        Graph/ValidPath.cpp
        Graph/CountPairs.cpp
        Graph/MaxSatisfied.cpp
        Graph/AmountOfTime.cpp
        theInclude.h
        Graph/MakeConnected.cpp
        Graph/MinScore.cpp
        text.cpp
        LeetCodeCompare/NumberOfPairs.cpp
        LeetCodeCompare/NumberOfPairs.cpp
        LeetCodeCompare/MaximumLength.cpp
        lisan1.cpp
        temp.cpp
        LeetCodeCompare/lllll.cpp
)
